--- a/src/main.sass
+++ b/src/main.sass
@@ -6,6 +6,7 @@
   font-display: swap
 
 #app
+    //all: unset
     width: 100%
     
 h1
@@ -41,6 +42,7 @@ html
     scroll-padding-top: 40px
     
 body
+    //background-color: #ffffff
     margin: 0
     display: flex
     flex-direction: column
