--- a/src/main.css
+++ b/src/main.css
@@ -276,12 +276,14 @@ input::-webkit-inner-spin-button {
 @media screen and (max-width: 525px) {
   html {
     width: 100%;
+    -webkit-overflow-scrolling: touch;
   }
   body {
     width: 100%;
+    -webkit-overflow-scrolling: touch;
   }
   header {
-    width: 73%;
+    width: 100%;
   }
   nav {
     display: none;
