--- a/src/main.sass
+++ b/src/main.sass
@@ -239,9 +239,11 @@ input::-webkit-inner-spin-button
 @media  screen and (max-width: 525px) 
     html
         width: 100%
+        -webkit-overflow-scrolling: touch
     
     body
         width: 100%
+        -webkit-overflow-scrolling: touch
     
     header
         width: 73%
