--- a/src/main.sass
+++ b/src/main.sass
@@ -49,7 +49,8 @@ body
     align-items: center
 
 header
-    position: fixed
+    position: sticky
+    top: 0
     display: flex
     flex-direction: row
     justify-content: space-between
