--- a/src/main.css
+++ b/src/main.css
@@ -83,15 +83,6 @@ main {
 
 input {
   all: unset;
-  position: relative;
-  top: 2px;
-  left: 16px;
-  font-size: 16px;
-  font-family: Roboto;
-  font-weight: 500;
-  color: #252525;
-  margin: 0;
-  width: 391px;
 }
 
 .input_text {
@@ -210,7 +201,8 @@ input::-webkit-inner-spin-button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #E1DAE3;
+  background-color: transparent;
+  border: 1px solid #000000;
   border-radius: 10px;
   width: 153px;
   height: 40px;
@@ -239,6 +231,60 @@ input::-webkit-inner-spin-button {
 
 .copy_animate_on {
   animation: 3s visible_on;
+}
+
+.input {
+  position: relative;
+  width: 400px;
+  height: 40px;
+}
+.input__label {
+  position: absolute;
+  left: 10px;
+  top: 12px;
+  padding: 0;
+  margin: 0;
+  white-space: nowrap;
+  transform: translate(0, 0);
+  transform-origin: 0 0;
+  transition: transform 120ms ease-in;
+  font-size: 16px;
+  font-family: Roboto;
+  font-weight: 400;
+  color: #676767;
+  margin: 0;
+}
+.input__img {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  top: -32px;
+  left: 384px;
+}
+.input__field {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  border: 1px solid #000000;
+  padding: 0 0 0 14px;
+  color: #000000;
+  background: transparent;
+  border-radius: 10px;
+  width: 400px;
+  height: 40px;
+  font-size: 16px;
+  font-family: Roboto;
+  font-weight: 400;
+}
+.input__field:not(:-moz-placeholder-shown) + .input__label {
+  transform: translate(0.25rem, -145%) scale(0.8);
+  color: #000000;
+}
+.input__field:focus + .input__label, .input__field:not(:placeholder-shown) + .input__label {
+  transform: translate(0.25rem, -145%) scale(0.8);
+  color: #000000;
 }
 
 @keyframes visible_on {
