--- a/src/main.css
+++ b/src/main.css
@@ -299,6 +299,18 @@ input::-webkit-inner-spin-button {
   }
 }
 @media screen and (max-width: 1300px) {
+  html {
+    max-width: 100%;
+    padding: 0 15px;
+  }
+  body {
+    max-width: 100%;
+    padding: 0 15px;
+  }
+  #app {
+    max-width: 100%;
+    padding: 0 15px;
+  }
   nav {
     display: flex;
     flex-direction: row;
