--- a/src/main.sass
+++ b/src/main.sass
@@ -274,6 +274,18 @@ input::-webkit-inner-spin-button
         opacity: 0
 
 @media  screen and (max-width: 1300px) 
+    html
+        max-width: 100%
+        padding: 0 15px
+
+    body
+        max-width: 100%
+        padding: 0 15px
+
+    #app
+        max-width: 100%
+        padding: 0 15px
+
     nav
         display: flex
         flex-direction: row
