--- a/src/main.css
+++ b/src/main.css
@@ -300,16 +300,13 @@ input::-webkit-inner-spin-button {
 }
 @media screen and (max-width: 1300px) {
   html {
-    max-width: 100%;
-    padding: 0 15px;
+    overflow: hidden;
   }
   body {
-    max-width: 100%;
-    padding: 0 15px;
+    overflow: hidden;
   }
   #app {
-    max-width: 100%;
-    padding: 0 15px;
+    overflow: hidden;
   }
   nav {
     display: flex;
