--- a/src/main.sass
+++ b/src/main.sass
@@ -274,7 +274,12 @@ input::-webkit-inner-spin-button
         opacity: 0
 
 @media  screen and (max-width: 1300px) 
-
+    html
+        overflow-x: hidden
+    body
+        overflow-x: hidden
+    #app
+        overflow-x: hidden
     nav
         display: flex
         flex-direction: row
