--- a/src/main.css
+++ b/src/main.css
@@ -38,12 +38,14 @@ a {
   font-size: 20px;
   font-family: Roboto;
   color: #000000;
+  cursor: pointer;
 }
 html {
   scroll-padding-top: 40px;
 }
 
 body {
+  background-color: #efefef;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -51,14 +53,13 @@ body {
 }
 
 header {
-  position: sticky;
-  top: 0;
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 4px 8px 0px rgba(67, 34, 80, 0.1);
-  background-color: #ffffff;
+  box-shadow: 0px 4px 8px 0px rgba(67, 34, 80, 0.2);
+  background-color: #f1efef;
   height: 72px;
   width: 100%;
   z-index: 1000;
@@ -155,7 +156,7 @@ input::-webkit-inner-spin-button {
 }
 
 .empty_card {
-  height: 50px;
+  height: 120px;
 }
 
 .card {
@@ -166,9 +167,12 @@ input::-webkit-inner-spin-button {
   justify-content: space-between;
   width: 727px;
   height: 278px;
-  border: 1px solid #16121a;
   border-radius: 10px;
   padding: 10px 0 0 0;
+  box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1), -10px -10px 10px rgb(255, 255, 255);
+}
+.card__info {
+  padding: 0 0 14px 0;
 }
 .card__empty {
   height: 0;
@@ -208,6 +212,9 @@ input::-webkit-inner-spin-button {
   height: 40px;
 }
 
+.copyed_text {
+  cursor: pointer;
+}
 .copyed_text:hover {
   color: #8973c1;
 }
@@ -285,6 +292,11 @@ input::-webkit-inner-spin-button {
 .input__field:focus + .input__label, .input__field:not(:placeholder-shown) + .input__label {
   transform: translate(0.25rem, -145%) scale(0.8);
   color: #000000;
+}
+
+.glass {
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
 
 @keyframes visible_on {
@@ -371,7 +383,7 @@ input::-webkit-inner-spin-button {
   .card {
     flex-direction: column;
     justify-content: space-between;
-    width: 500px;
+    width: 365px;
     height: 300px;
     border: 0px solid #16121a;
   }
