--- a/src/main.sass
+++ b/src/main.sass
@@ -266,6 +266,7 @@ input::-webkit-inner-spin-button
         font-size: 16px
         font-family: Roboto
         font-weight: 400
+        cursor: pointer
         &:focus,
         &:not(:placeholder-shown) 
             & + .input__label 
