--- a/src/main.sass
+++ b/src/main.sass
@@ -242,6 +242,7 @@ input::-webkit-inner-spin-button
         font-weight: 400
         color: #676767
         margin: 0
+        cursor: pointer
 
     &__img
         position: relative
@@ -249,6 +250,7 @@ input::-webkit-inner-spin-button
         height: 24px
         top: -32px
         left: 384px
+        cursor: pointer
 
     &__field 
         position: relative
