--- a/src/main.sass
+++ b/src/main.sass
@@ -269,11 +269,14 @@ input::-webkit-inner-spin-button
         font-family: Roboto
         font-weight: 400
         cursor: pointer
+        &:focus
+            cursor: text
         &:focus,
         &:not(:placeholder-shown) 
             & + .input__label 
                 transform: translate(.25rem, -145%) scale(.8)
                 color: $black
+                
 
 .glass
     backdrop-filter: blur(10px)
