--- a/src/main.sass
+++ b/src/main.sass
@@ -371,6 +371,35 @@ input::-webkit-inner-spin-button
                 height: 72px
 
 @media  screen and (max-width: 390px) 
+    .input 
+        width: 320px
+        height: 40px
+        &__img
+            display: none
+
+        &__field 
+            width: 308px
+            height: 40px
+    .card
+        flex-direction: column
+        justify-content: space-between
+        width: 345px
+        height: 300px
+        border: 0px solid #16121a
+        &__info
+            font-size: 14px
+            width: 340px
+        &__empty
+            height: 0
+        &__main
+            flex-direction: column
+            width: 700px
+            height: 220px
+            &__inputs
+                height: 110px
+            &__results
+                height: 72px
+
     header
         width: 68%
 
