mobile bg + pc card fix

--- a/src/main.sass
+++ b/src/main.sass
@@ -168,7 +168,7 @@ input::-webkit-inner-spin-button
     align-items: center
     justify-content: space-between
     width: 727px
-    height: 278px
+    height: 270px
     //border: 1px solid #16121a
     border-radius: 10px
     padding: 10px 0 0 0
@@ -184,14 +184,14 @@ input::-webkit-inner-spin-button
         flex-direction: row
         align-items: center
         justify-content: space-between
-        width: 700px
+        width: 665px
         height: 152px
         &__inputs
             display: flex
             flex-direction: column
             align-items: center
             justify-content: space-between
-            height: 152px
+            height: 112px
         &__results
             display: flex
             flex-direction: column
@@ -334,8 +334,8 @@ input::-webkit-inner-spin-button
     body
         width: 100%
         -webkit-overflow-scrolling: touch
-        background: url("./imgs/bg.png")
-        background-size: 145% 600px
+        background: url("./imgs/bg_mobile.png")
+        background-size: 100% 650px
         background-repeat: repeat
         background-position: center center
     
