--- a/src/main.css
+++ b/src/main.css
@@ -178,7 +178,7 @@ input::-webkit-inner-spin-button {
   align-items: center;
   justify-content: space-between;
   width: 727px;
-  height: 278px;
+  height: 270px;
   border-radius: 10px;
   padding: 10px 0 0 0;
   box-shadow: inset 0px 5px 10px rgba(0, 0, 0, 0.3);
@@ -196,7 +196,7 @@ input::-webkit-inner-spin-button {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 700px;
+  width: 665px;
   height: 152px;
 }
 .card__main__inputs {
@@ -204,7 +204,7 @@ input::-webkit-inner-spin-button {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 152px;
+  height: 112px;
 }
 .card__main__results {
   display: flex;
@@ -369,8 +369,8 @@ input::-webkit-inner-spin-button {
   body {
     width: 100%;
     -webkit-overflow-scrolling: touch;
-    background: url("./imgs/bg.png");
-    background-size: 145% 600px;
+    background: url("./imgs/bg_mobile.png");
+    background-size: 100% 650px;
     background-repeat: repeat;
     background-position: center center;
   }
