--- a/src/main.sass
+++ b/src/main.sass
@@ -58,7 +58,7 @@ body
     flex-direction: column
     align-items: center
     background: url("./imgs/bg.png")
-    background-size: 100% 700px
+    background-size: 100% 800px
     background-repeat: repeat
     background-position: center center
 
@@ -70,8 +70,8 @@ header
     justify-content: space-between
     align-items: center
     //border-bottom: 1px solid #16121a
-    box-shadow: 0px 4px 8px 0px rgba(67, 34, 80, 0.2)
-    background-color: #f1efef
+    //box-shadow: 0px 4px 8px 0px rgba(67, 34, 80, 0.2)
+    //background-color: #f1efef
     height: 72px
     width: 100%
     z-index: 1000
@@ -81,7 +81,12 @@ nav
     flex-direction: row
     align-items: center
     justify-content: space-between
+    padding: 0 14px 0 14px
+    background-color: #ffffff
+    border-radius: 16px
+    border: 1px solid #dbdbdb
     width: 851px
+    height: 45px
 
 main
     width: 100%
@@ -129,9 +134,14 @@ input::-webkit-inner-spin-button
     margin: 0
 
 .logo
-    width: 230px
+    width: 212px
+    height: 45px
     display: flex
     justify-content: center
+    align-items: center
+    background-color: #ffffff
+    border-radius: 20px
+    border: 1px solid #dbdbdb
 
 .theme_switch
     display: flex
@@ -139,6 +149,16 @@ input::-webkit-inner-spin-button
     align-items: center
     justify-content: space-evenly
     width: 224px
+    &__bg
+        display: flex
+        flex-direction: row
+        align-items: center
+        justify-content: space-evenly
+        background-color: #ffffff
+        border-radius: 20px
+        border: 1px solid #dbdbdb
+        width: 110px
+        height: 45px
     &__empty
         width: 110px
     &__empty2
