--- a/src/main.sass
+++ b/src/main.sass
@@ -378,6 +378,9 @@ input::-webkit-inner-spin-button
     .input_div
         width: 340px
         height: 56px
+    
+    .logo
+        padding: 0 4px 0 4px
 
     .theme_switch
         width: 110px
