--- a/src/main.sass
+++ b/src/main.sass
@@ -5,7 +5,20 @@
   font-style: normal
   font-display: swap
 
-$black: #000000
+:root
+  --bg: 1
+  --black: #000000
+  --white: #ffffff
+  --borderhead: #dbdbdb
+  --inputtext: #2c2c2c
+  --inputbg: #E1DAE3
+  --switcherbg: #65558f
+  --cardshadow: rgba(0, 0, 0, 0.3)
+  --copyedtext: #8973c1
+  --copyalert: #cebaff
+  --inputlabel: #676767
+  --test: #2a2a2a
+  --img: 0
 
 #app
     //all: unset
@@ -15,53 +28,64 @@ h1
     font-size: 32px
     font-family: Roboto
     font-weight: 600
-    color: $black
+    color: var(--black)
     margin: 0
 
 h2
     font-size: 20px
     font-family: Roboto
     font-weight: 600
-    color: $black
+    color: var(--black)
     margin: 0
 
 h3
     font-size: 20px
     font-family: Roboto
     font-weight: 500
-    color: $black
+    color: var(--black)
     margin: 0
 
 p
     font-size: 20px
     font-family: Roboto
     font-weight: 400
-    color: $black
+    color: var(--black)
     margin: 0
 
 a
     all: unset
     font-size: 20px
     font-family: Roboto
-    color: $black
+    color: var(--black)
     cursor: pointer
     &:hover
         
 
 html
     scroll-padding-top: 40px
+    background-color: var(--white)
     
 body
-    background-color: #efefef
+    position: relative
     margin: 0
     display: flex
     flex-direction: column
     align-items: center
+
+        
+.over_body
+    position: absolute
+    width: 100%
+    height: 100%
     background: url("./imgs/bg.png")
-    background-size: 100% 800px
+    background-size: 100% auto
     background-repeat: repeat
     background-position: center center
-
+    z-index: -1
+    opacity: var(--bg)
+    
+    
+    
 header
     position: fixed
     //top: 0
@@ -82,9 +106,9 @@ nav
     align-items: center
     justify-content: space-between
     padding: 0 14px 0 14px
-    background-color: #ffffff
+    background-color: var(--white)
     border-radius: 16px
-    border: 1px solid #dbdbdb
+    border: 1px solid var(--borderhead)
     width: 851px
     height: 45px
 
@@ -114,10 +138,10 @@ input
     font-size: 12px
     font-family: Roboto
     font-weight: 400
-    color: #2c2c2c
+    color: var(--inputtext)
     margin: 0
 .input_div
-    background-color: #E1DAE3
+    background-color: var(--inputbg)
     border-radius: 10px
     width: 450px
     height: 56px
@@ -139,9 +163,10 @@ input::-webkit-inner-spin-button
     display: flex
     justify-content: center
     align-items: center
-    background-color: #ffffff
+    background-color: var(--white)
     border-radius: 20px
-    border: 1px solid #dbdbdb
+    border: 1px solid var(--borderhead)
+    margin: 0 0 0 10px
 
 .theme_switch
     display: flex
@@ -154,9 +179,9 @@ input::-webkit-inner-spin-button
         flex-direction: row
         align-items: center
         justify-content: space-evenly
-        background-color: #ffffff
+        background-color: var(--white)
         border-radius: 20px
-        border: 1px solid #dbdbdb
+        border: 1px solid var(--borderhead)
         width: 110px
         height: 45px
     &__empty
@@ -167,7 +192,7 @@ input::-webkit-inner-spin-button
 .switcher
     width: 56px
     height: 34px
-    background-color: #65558f
+    background-color: var(--switcherbg)
     border-radius: 25px
     &__round
         position: relative
@@ -177,6 +202,7 @@ input::-webkit-inner-spin-button
 .sun_icon
     width: 28px
     height: 28px
+    filter: invert(var(--img))
 
 .empty_card
     height: 120px
@@ -192,7 +218,7 @@ input::-webkit-inner-spin-button
     //border: 1px solid #16121a
     border-radius: 10px
     padding: 10px 0 0 0
-    box-shadow: inset 0px 5px 10px rgba(0, 0, 0, 0.3)
+    box-shadow: inset 0px 5px 10px var(--cardshadow)
     &__info
         font-weight: 300
         font-size: 16px
@@ -225,7 +251,7 @@ input::-webkit-inner-spin-button
     align-items: center
     justify-content: center
     background-color: transparent
-    border: 1px solid $black
+    border: 1px solid var(--black)
     border-radius: 10px
     width: 153px
     height: 40px
@@ -233,7 +259,7 @@ input::-webkit-inner-spin-button
 .copyed_text
     cursor: pointer
     &:hover
-        color: #8973c1
+        color: var(--copyedtext)
 
 .note
     font-size: 12px
@@ -245,7 +271,7 @@ input::-webkit-inner-spin-button
     opacity: 0
     justify-content: center
     align-items: center
-    background-color: #cebaff
+    background-color: var(--copyalert)
     border-radius: 5px
     font-size: 18px
     width: 135px
@@ -271,7 +297,7 @@ input::-webkit-inner-spin-button
         font-size: 16px
         font-family: Roboto
         font-weight: 400
-        color: #676767
+        color: var(--inputlabel)
         margin: 0
         cursor: pointer
 
@@ -282,6 +308,7 @@ input::-webkit-inner-spin-button
         top: -32px
         left: 384px
         cursor: pointer
+        filter: invert(var(--img))
 
     &__field 
         position: relative
@@ -289,9 +316,9 @@ input::-webkit-inner-spin-button
         left: 0
         display: block
         width: 100%
-        border: 1px solid $black
+        border: 1px solid var(--black)
         padding: 0 0 0 14px
-        color: $black
+        color: var(--black)
         background: transparent
         border-radius: 10px
         width: 400px
@@ -306,7 +333,7 @@ input::-webkit-inner-spin-button
         &:not(:placeholder-shown) 
             & + .input__label 
                 transform: translate(.25rem, -145%) scale(.8)
-                color: $black
+                color: var(--black)
                 
 
 .glass
@@ -384,18 +411,18 @@ input::-webkit-inner-spin-button
 
     .theme_switch
         width: 110px
-        background-color: #ffffff
+        background-color: var(--white)
         border-radius: 20px
-        border: 1px solid #dbdbdb
+        border: 1px solid var(--borderhead)
         height: 45px
         &__bg
             display: flex
             flex-direction: row
             align-items: center
             justify-content: space-evenly
-            background-color: #ffffff
+            background-color: var(--white)
             border-radius: 20px
-            border: 1px solid #dbdbdb
+            border: 1px solid var(--borderhead)
             width: 110px
             height: 45px
         &__empty
@@ -405,7 +432,7 @@ input::-webkit-inner-spin-button
     .card
         flex-direction: column
         justify-content: space-between
-        background-color: #ffffff
+        background-color: var(--white)
         width: 365px
         height: 300px
         border: 0px solid #16121a
