animation add + mobile fix

--- a/src/main.css
+++ b/src/main.css
@@ -205,6 +205,7 @@ input::-webkit-inner-spin-button {
   position: relative;
   left: 29px;
   top: 5px;
+  transform: translate(0, 0);
 }
 
 .sun_icon {
@@ -300,6 +301,16 @@ input::-webkit-inner-spin-button {
   animation: 3s visible_on;
 }
 
+.switch_animate_on {
+  animation: 0.3s switcher;
+  transform: translate(-25px, 0);
+}
+
+.switch_animate_off {
+  animation: 0.3s switcher_reverse;
+  transform: translate(0, 0);
+}
+
 .input {
   position: relative;
   width: 400px;
@@ -377,6 +388,22 @@ input::-webkit-inner-spin-button {
     opacity: 0;
   }
 }
+@keyframes switcher {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-25px, 0);
+  }
+}
+@keyframes switcher_reverse {
+  0% {
+    transform: translate(-25px, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
 @media screen and (max-width: 1300px) {
   html {
     overflow-x: hidden;
@@ -409,6 +436,9 @@ input::-webkit-inner-spin-button {
   }
 }
 @media screen and (max-width: 525px) {
+  .over_body {
+    background: url("./imgs/bg_mobile.png");
+  }
   html {
     width: 100%;
     -webkit-overflow-scrolling: touch;
@@ -416,10 +446,6 @@ input::-webkit-inner-spin-button {
   body {
     width: 100%;
     -webkit-overflow-scrolling: touch;
-    background: url("./imgs/bg_mobile.png");
-    background-size: 100% 650px;
-    background-repeat: repeat;
-    background-position: center center;
   }
   header {
     width: 73%;
@@ -451,6 +477,7 @@ input::-webkit-inner-spin-button {
     border-radius: 20px;
     border: 1px solid var(--borderhead);
     height: 45px;
+    margin: 0 10px 0 0;
   }
   .theme_switch__bg {
     display: flex;
