--- a/src/main.sass
+++ b/src/main.sass
@@ -13,7 +13,7 @@
   --inputtext: #2c2c2c
   --inputbg: #E1DAE3
   --switcherbg: #65558f
-  --cardshadow: rgba(0, 0, 0, 0.3)
+  --cardshadow: rgba(0, 0, 0, 0.17)
   --copyedtext: #8973c1
   --copyalert: #cebaff
   --inputlabel: #676767
@@ -202,9 +202,18 @@ input::-webkit-inner-spin-button
         transform: translate(0, 0)
 
 .sun_icon
+
     width: 28px
     height: 28px
     filter: invert(var(--img))
+
+.moon_icon
+    opacity: 0
+    position: fixed
+    width: 30px
+    height: 30px
+    filter: invert(var(--img))
+
 
 .empty_card
     height: 120px
@@ -345,6 +354,26 @@ input::-webkit-inner-spin-button
     animation: 0.3s switcher_reverse
     transform: translate(0, 0)
 
+.sun_on
+    animation: 0.3s sun_left_animation
+    transform: translate(0, 0)
+    opacity: 1
+
+.sun_off
+    //animation: 0.3s right_animation
+    transform: translate(30px, 0)
+    opacity: 0
+
+.moon_on
+    animation: 0.3s moon_left_animation
+    transform: translate(-32px, 0)
+    opacity: 1
+
+.moon_off
+    //animation: 0.3s right_animation
+    transform: translate(30px, 0)
+    opacity: 0
+
 @keyframes visible_on
     0% 
         opacity: 0
@@ -364,6 +393,29 @@ input::-webkit-inner-spin-button
         transform: translate(-26px, 0)
     100% 
         transform: translate(0, 0)
+
+@keyframes sun_left_animation
+    0% 
+        transform: translate(30px, 0)
+        opacity: 0
+    30%
+        opacity: 0
+    100% 
+        transform: translate(0, 0)
+        opacity: 1
+
+@keyframes moon_left_animation
+    0% 
+        transform: translate(0, 0)
+        opacity: 0
+    30%
+        opacity: 0
+    100% 
+        transform: translate(-32px, 0)
+        opacity: 1
+
+
+    
         
 @media  screen and (max-width: 1300px) 
     html
@@ -394,6 +446,7 @@ input::-webkit-inner-spin-button
 @media  screen and (max-width: 525px)        
     .over_body
         background: url("./imgs/bg_mobile.png")
+        background-size: 100% auto
 
     html
         width: 100%
