add vue3-cookies + save theme

--- a/src/main.sass
+++ b/src/main.sass
@@ -3,7 +3,7 @@
   src: url('fonts/Roboto-Regular.ttf') format('truetype')
   font-weight: normal
   font-style: normal
-  font-display: swap
+  font-display: swaplet my_cookie_value
 
 :root
   --bg: 1
